# cpp-project-sdl

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Project_SDL_Part1_base/: CMakeLists.txt  Makefile  Project_SDL1.cpp  Project_SDL1.h  SDL_part1  cmake_install.cmake  main.cpp
Project_SDL_Part1_base/test/: CMakeCache.txt  CMakeLists.txt  Makefile  Project_SDL1.cpp  Project_SDL1.h  SDL_part1  cmake_install.cmake  main.cpp  test.txt
